# ecommerce-pro

./: Makefile  pyproject.toml  requirements.txt
app/accounts/: apps.py  forms.py  models.py  views.py
app/accounts/migrations/: 0001_initial.py
app/carts/: models.py  views.py
app/carts/migrations/: 0001_initial.py  0002_initial.py
app/category/: apps.py
app/category/migrations/: 0001_initial.py
app/common/: choices.py  renderers.py  utils.py
app/home/: apps.py  urls.py  views.py
app/orders/: models.py  p.py  urls.py  views.py
app/orders/migrations/: 0001_initial.py  0002_initial.py  0002_payment_payment_method_id_payment_payment_type_id_and_more.py  0003_alter_order_status.py  0004_payment_transaction_data.py  0005_payment_date_of_expiration.py  0006_alter_order_status.py  0007_alter_order_status.py
app/payments/: urls.py  views.py
app/store/: admin.py  apps.py  models.py  signals.py  views.py
app/store/migrations/: 0001_initial.py  0002_variation_variation_category_list_and_more.py  0003_product_variation_list.py  (+1 more)
config/: urls.py
config/settings/: base.py  local.py
nginx/: ecommerce.conf
static/js/: app_mercado_pago.js  order.js  script.js
templates/: base.html  home.html  home_2.html
templates/accounts/: my_orders.html
templates/includes/: dashboard_sidebar.html  footer.html  navbar.html
templates/orders/: payments.html  payments_mercadopago.html  payments_pagseguro.html  payments_qrcode_pix.html
templates/store/: cart.html  checkout.html  product_detail.html  product_detail1.html  store.html
